feat: fix role-based auth; PR feedback; abstract authenticator methods